--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>National Park Planner</title>
 </head>
@@ -76,11 +77,11 @@
             <div class="collapsibleDiv col s9">
                 <ul class="collapsible">
                     <li>
-                        <div class="collapsible-header"><i class="material-icons"></i>Park Info</div>
+                        <div class="collapsible-header"><i class="material-icons">filter_hdr</i>Park Info</div>
                         <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
                     </li>
                     <li>
-                        <div class="collapsible-header"><i class="material-icons"></i>Weather Forecast</div>
+                        <div class="collapsible-header"><i class="material-icons">cloud_queue</i>Weather Forecast</div>
                         <div class="collapsible-body">
                             <div class="row">
                                 <div id="day1" class="card col s12 col m5 col l3 col xl2">
@@ -122,7 +123,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="collapsible-header"><i class="material-icons"></i>Events</div>
+                        <div class="collapsible-header"><i class="material-icons">date_range</i>Events</div>
                         <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
                     </li>
                 </ul>
