--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-√<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,133 +8,134 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>National Park Planner</title>
 </head>
 
 <body>
     <div class="container">
-            <div class="row">
-                <div>
-                    <div class="input-field sm3">
-                      <select class="stateDropdown browser-default">
+        <div class="row">
+            <div class="col s3">
+                <div class="input-field">
+                    <select class="stateDropdown browser-default">
                         <option disabled selected>Select a state</option>
-                        <option  value="AL">Alabama</option>
-                        <option  value="AK">Alaska</option>
-                        <option  value="AZ">Arizona</option>
-                        <option  value="AR">Arkansas</option>
-                        <option  value="CA">California</option>
-                        <option  value="CO">Colorado</option>
-                        <option  value="CT">Connecticut</option>
-                        <option  value="DE">Delaware</option>
-                        <option  value="DC">District Of Columbia</option>
-                        <option  value="FL">Florida</option>
-                        <option  value="GA">Georgia</option>
-                        <option  value="HI">Hawaii</option>
-                        <option  value="ID">Idaho</option>
-                        <option  value="IL">Illinois</option>
-                        <option  value="IN">Indiana</option>
-                        <option  value="IA">Iowa</option>
-                        <option  value="KS">Kansas</option>
-                        <option  value="KY">Kentucky</option>
-                        <option  value="LA">Louisiana</option>
-                        <option  value="ME">Maine</option>
-                        <option  value="MD">Maryland</option>
-                        <option  value="MA">Massachusetts</option>
-                        <option  value="MI">Michigan</option>
-                        <option  value="MN">Minnesota</option>
-                        <option  value="MS">Mississippi</option>
-                        <option  value="MO">Missouri</option>
-                        <option  value="MT">Montana</option>
-                        <option  value="NE">Nebraska</option>
-                        <option  value="NV">Nevada</option>
-                        <option  value="NH">New Hampshire</option>
-                        <option  value="NJ">New Jersey</option>
-                        <option  value="NM">New Mexico</option>
-                        <option  value="NY">New York</option>
-                        <option  value="NC">North Carolina</option>
-                        <option  value="ND">North Dakota</option>
-                        <option  value="OH">Ohio</option>
-                        <option  value="OK">Oklahoma</option>
-                        <option  value="OR">Oregon</option>
-                        <option  value="PA">Pennsylvania</option>
-                        <option  value="RI">Rhode Island</option>
-                        <option  value="SC">South Carolina</option>
-                        <option  value="SD">South Dakota</option>
-                        <option  value="TN">Tennessee</option>
-                        <option  value="TX">Texas</option>
-                        <option  value="UT">Utah</option>
-                        <option  value="VT">Vermont</option>
-                        <option  value="VA">Virginia</option>
-                        <option  value="WA">Washington</option>
-                        <option  value="WV">West Virginia</option>
-                        <option  value="WI">Wisconsin</option>
-                        <option  value="WY">Wyoming</option>
-                      </select>
-                    </div>
-                    </div>
-            <div class="collapsibleDiv col s9">
-                <ul class="collapsible">
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons"></i>Park Info</div>
-                        <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons"></i>Weather Forecast</div>
-                        <div class="collapsible-body">
-                            <div class="row">
-                                <div id="day1" class="card col s12 col m5 col l3 col xl2">
-                                    <div id="tempDiv1" class="tempDiv"></div>
-                                    <br>
-                                    <div id="weatherDiv1"></div>
-                                    <br>
-                                    <div id="windSpeedDiv1" class="windSpeedDiv"></div>
-                                </div>
-                                <div id="day2" class="card col s12 col m5 col l3 col xl2">
-                                    <div id="tempDiv2" class="tempDiv"></div>
-                                    <br>
-                                    <div id="weatherDiv2"></div>
-                                    <br>
-                                    <div id="windSpeedDiv2" class="windSpeedDiv"></div>
-                                </div>
-                                <div id="day3" class="card col s12 col m5 col l3 col xl2">
-                                    <div id="tempDiv3" class="tempDiv"></div>
-                                    <br>
-                                    <div id="weatherDiv3"></div>
-                                    <br>
-                                    <div id="windSpeedDiv3" class="windSpeedDiv"></div>
-                                </div>
-                                <div id="day4" class="card col s12 col m5 col l3 col xl2">
-                                    <div id="tempDiv4" class="tempDiv"></div>
-                                    <br>
-                                    <div id="weatherDiv4"></div>
-                                    <br>
-                                    <div id="windSpeedDiv4" class="windSpeedDiv"></div>
-                                </div>
-                                <div id="day5" class="card col s12 col m5 col l3 col xl2">
-                                    <div id="tempDiv5" class="tempDiv"></div>
-                                    <br>
-                                    <div id="weatherDiv5"></div>
-                                    <br>
-                                    <div id="windSpeedDiv5" class="windSpeedDiv"></div>
+                        <option value="AL">Alabama</option>
+                        <option value="AK">Alaska</option>
+                        <option value="AZ">Arizona</option>
+                        <option value="AR">Arkansas</option>
+                        <option value="CA">California</option>
+                        <option value="CO">Colorado</option>
+                        <option value="CT">Connecticut</option>
+                        <option value="DE">Delaware</option>
+                        <option value="DC">District Of Columbia</option>
+                        <option value="FL">Florida</option>
+                        <option value="GA">Georgia</option>
+                        <option value="HI">Hawaii</option>
+                        <option value="ID">Idaho</option>
+                        <option value="IL">Illinois</option>
+                        <option value="IN">Indiana</option>
+                        <option value="IA">Iowa</option>
+                        <option value="KS">Kansas</option>
+                        <option value="KY">Kentucky</option>
+                        <option value="LA">Louisiana</option>
+                        <option value="ME">Maine</option>
+                        <option value="MD">Maryland</option>
+                        <option value="MA">Massachusetts</option>
+                        <option value="MI">Michigan</option>
+                        <option value="MN">Minnesota</option>
+                        <option value="MS">Mississippi</option>
+                        <option value="MO">Missouri</option>
+                        <option value="MT">Montana</option>
+                        <option value="NE">Nebraska</option>
+                        <option value="NV">Nevada</option>
+                        <option value="NH">New Hampshire</option>
+                        <option value="NJ">New Jersey</option>
+                        <option value="NM">New Mexico</option>
+                        <option value="NY">New York</option>
+                        <option value="NC">North Carolina</option>
+                        <option value="ND">North Dakota</option>
+                        <option value="OH">Ohio</option>
+                        <option value="OK">Oklahoma</option>
+                        <option value="OR">Oregon</option>
+                        <option value="PA">Pennsylvania</option>
+                        <option value="RI">Rhode Island</option>
+                        <option value="SC">South Carolina</option>
+                        <option value="SD">South Dakota</option>
+                        <option value="TN">Tennessee</option>
+                        <option value="TX">Texas</option>
+                        <option value="UT">Utah</option>
+                        <option value="VT">Vermont</option>
+                        <option value="VA">Virginia</option>
+                        <option value="WA">Washington</option>
+                        <option value="WV">West Virginia</option>
+                        <option value="WI">Wisconsin</option>
+                        <option value="WY">Wyoming</option>
+                    </select>
+                </div>
+            </div>
+                <div class="collapsibleDiv col s9">
+                    <ul class="collapsible">
+                        <li>
+                            <div class="collapsible-header"><i class="material-icons">filter_hdr</i>Park Info</div>
+                            <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                        </li>
+                        <li>
+                            <div class="collapsible-header"><i class="material-icons">cloud_queue</i>Weather Forecast</div>
+                            <div class="collapsible-body">
+                                <div class="row">
+                                    <div id="day1" class="card col s12 col m5 col l3 col xl2">
+                                        <div id="tempDiv1" class="tempDiv"></div>
+                                        <br>
+                                        <div id="weatherDiv1"></div>
+                                        <br>
+                                        <div id="windSpeedDiv1" class="windSpeedDiv"></div>
+                                    </div>
+                                    <div id="day2" class="card col s12 col m5 col l3 col xl2">
+                                        <div id="tempDiv2" class="tempDiv"></div>
+                                        <br>
+                                        <div id="weatherDiv2"></div>
+                                        <br>
+                                        <div id="windSpeedDiv2" class="windSpeedDiv"></div>
+                                    </div>
+                                    <div id="day3" class="card col s12 col m5 col l3 col xl2">
+                                        <div id="tempDiv3" class="tempDiv"></div>
+                                        <br>
+                                        <div id="weatherDiv3"></div>
+                                        <br>
+                                        <div id="windSpeedDiv3" class="windSpeedDiv"></div>
+                                    </div>
+                                    <div id="day4" class="card col s12 col m5 col l3 col xl2">
+                                        <div id="tempDiv4" class="tempDiv"></div>
+                                        <br>
+                                        <div id="weatherDiv4"></div>
+                                        <br>
+                                        <div id="windSpeedDiv4" class="windSpeedDiv"></div>
+                                    </div>
+                                    <div id="day5" class="card col s12 col m5 col l3 col xl2">
+                                        <div id="tempDiv5" class="tempDiv"></div>
+                                        <br>
+                                        <div id="weatherDiv5"></div>
+                                        <br>
+                                        <div id="windSpeedDiv5" class="windSpeedDiv"></div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons"></i>Events</div>
-                        <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-                    </li>
-                </ul>
+                        </li>
+                        <li>
+                            <div class="collapsible-header"><i class="material-icons">date_range</i>Events</div>
+                            <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
 
 
 
-    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="nationalpark.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script src="nationalpark.js"></script>
 </body>
 
 </html>
