fixed changes to html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                 <ul class="collapsible">
                     <li>
                         <div class="collapsible-header"><i class="material-icons">filter_hdr</i>Park Info</div>
-                        <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                        <div class="collapsible-body">
+                                <div class="parkInfoHere">	
+                                    </div> 
+                        </div>
                     </li>
                     <li>
                         <div class="collapsible-header"><i class="material-icons">cloud_queue</i>Weather Forecast</div>
