--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=GillSans' rel='stylesheet'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=GillSans' rel='stylesheet'> -->
     <link rel="stylesheet" href="style.css">
     <title>National Park Planner</title>
 </head>
@@ -108,7 +108,11 @@
                     </li>
                     <li>
                         <div class="collapsible-header"><i class="material-icons">date_range</i>Events</div>
-                        <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                        <div class="collapsible-body">
+                            <div class="eventInfoHere">
+
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </div>
