--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col s3">
+            <div class="col s3 m3">
                 <div class="input-field">
                     <select class="stateDropdown browser-default">
-                        <option disabled selected>Select a state</option>
+                        <option>Select a state</option>
                         <option value="AK">Alaska</option>
                         <option value="AZ">Arizona</option>
                         <option value="AR">Arkansas</option>
@@ -54,7 +54,7 @@
                     </select>
                 </div>
             </div>
-            <div class="collapsibleDiv col s9">
+            <div class="collapsibleDiv col s12 m9 l9">
                 <ul class="collapsible">
                     <li>
                         <div class="collapsible-header"><i class="material-icons">filter_hdr</i>Park Info</div>
