Add og image and description metatags

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- <link href='https://fonts.googleapis.com/css?family=GillSans' rel='stylesheet'> -->
     <link rel="stylesheet" href="style.css">
     <title>National Park Planner</title>
+    <meta property="og:description" content="Provides National Park information, images, weather, and events by a selected state." />
+    <meta property="og:image"
+        content="https://znylen88.github.io/National-Park-Trip-Planner/assets/WebsiteImage.png" />
 </head>
 
 <body>
